--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ span {
 
 .invalid p {
   color: white;
-  font-size: 40px;
+  font-size: 1.75rem;
   font-weight: 700;
 }
 
@@ -104,8 +104,8 @@ span {
 .retry {
   background-color: red;
   color: white;
-  font-size: 1.75em;
-  padding: 1rem 5rem;
+  font-size: 1.5em;
+  padding: 0.5rem 5rem;
 }
 
 button {
